#560 Add teamId field in inviteKeys. Update swagger docu. Remove security on "secure field"
